# sdk-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: async_usage.py  basic_usage.py  openai_compatibility.py  responses_example.py  routing_modes.py  simple.py  streaming.py
tests/: test_client.py
tokenrouter/: __init__.py  client.py  crypto.py  exceptions.py  models.py  types.py
