[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenrouter"
version = "1.0.0"
description = "Python SDK for TokenRouter - Intelligent LLM Routing API"
readme = "README.md"
authors = [
    {name = "TokenRouter Team", email = "support@tokenrouter.io"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "httpx>=0.24.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://tokenrouter.io"
Documentation = "https://docs.tokenrouter.io"
Repository = "https://github.com/tokenrouter/tokenrouter-python"
"Bug Reports" = "https://github.com/tokenrouter/tokenrouter-python/issues"

[tool.setuptools]
packages = ["tokenrouter"]

[tool.setuptools.package-dir]
"" = "."